--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Nitesh Thakur",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.1",
     "morgan": "^1.9.1"
